--- a/src/app/tree-table/tree-table.html
+++ b/src/app/tree-table/tree-table.html
@@ -1,33 +1,21 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="tree-table">
-
-  <!-- Linha com dados -->
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
-    <div class="tree-row">
-      <div class="tree-cell name-cell">
-        <span *ngIf="hasChild(0, node)" class="spacer"></span>
-        {{ node.name }}
-      </div>
-      <div class="tree-cell type-cell">
-        {{ node.type }}
-      </div>
-    </div>
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
+    <button mat-icon-button disabled></button>
+    <mat-checkbox class="checklist-leaf-node"
+                  [checked]="checklistSelection.isSelected(node)"
+                  (change)="checklistSelection.toggle(node);">{{node.item}}</mat-checkbox>
   </mat-tree-node>
 
-  <!-- Linha com botão de expandir/colapsar -->
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-    <div class="tree-row">
-      <div class="tree-cell name-cell">
-        <button mat-icon-button matTreeNodeToggle>
-          <mat-icon>
-            {{ treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right' }}
-          </mat-icon>
-        </button>
-        {{ node.name }}
-      </div>
-      <div class="tree-cell type-cell">
-        {{ node.type }}
-      </div>
-    </div>
+    <button mat-icon-button matTreeNodeToggle
+            [attr.aria-label]="'toggle ' + node.filename">
+      <mat-icon class="mat-icon-rtl-mirror">
+        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+      </mat-icon>
+    </button>
+    <mat-checkbox [checked]="descendantsAllSelected(node)"
+                  [indeterminate]="descendantsPartiallySelected(node)"
+                  (change)="todoItemSelectionToggle(node)">{{node.item}}</mat-checkbox>
   </mat-tree-node>
-
 </mat-tree>
+
