feat: implement RxJS example component with routing and basic observables

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,5 @@
 <main>
- <app-tree-table></app-tree-table>
-
+    <h1>Welcome to the App!</h1>
+    <p>This is a simple application demonstrating the use of HTML and Angular.</p>
+    <router-outlet></router-outlet>
 </main>
