--- a/src/app/tree-table/tree-table.html
+++ b/src/app/tree-table/tree-table.html
@@ -1,11 +1,6 @@
 <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
-    <button mat-icon-button disabled></button>
-    <mat-checkbox class="checklist-leaf-node"
-                  [checked]="checklistSelection.isSelected(node)"
-                  (change)="checklistSelection.toggle(node);">{{node.item}}</mat-checkbox>
-  </mat-tree-node>
 
+<!--Nó com filhos (pastas)-->
   <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
     <button mat-icon-button matTreeNodeToggle
             [attr.aria-label]="'toggle ' + node.filename">
@@ -14,8 +9,17 @@
       </mat-icon>
     </button>
     <mat-checkbox [checked]="descendantsAllSelected(node)"
-                  [indeterminate]="descendantsPartiallySelected(node)"
-                  (change)="todoItemSelectionToggle(node)">{{node.item}}</mat-checkbox>
+
+                  (change)="todoItemSelectionToggleByNodeWithChild(node)">{{node.item}}</mat-checkbox>
+  </mat-tree-node>
+  <!--[indeterminate]="descendantsPartiallySelected(node)"-->
+
+    <!-- No folha sem filhos-->
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
+    <button mat-icon-button disabled></button>
+    <mat-checkbox class="checklist-leaf-node"
+                  [checked]="checklistSelection.isSelected(node)"
+                  (change)="onLeafNodeChange(node)">{{node.item}}</mat-checkbox>
   </mat-tree-node>
 </mat-tree>
 
