--- a/src/app/tree-table/tree-table.html
+++ b/src/app/tree-table/tree-table.html
@@ -1,25 +1,47 @@
-<mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
+<main>
+  <section>
+   <form>
+    <label for="caminho">Caminho da Pasta (Windows):</label>
+    <input
+      type="text"
+      id="caminho"
+      [(ngModel)]="caminho"
+      name="caminho"
+      placeholder="Ex: C:\\Users\\MeuUsuario\\Documentos"
+      required
+    />
+    <button type="submit">Enviar</button>
+</form>
 
-<!--Nó com filhos (pastas)-->
-  <mat-tree-node *matTreeNodeDef="let node; when: hasChild" matTreeNodePadding>
-    <button mat-icon-button matTreeNodeToggle
-            [attr.aria-label]="'toggle ' + node.filename">
-      <mat-icon class="mat-icon-rtl-mirror">
-        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
-      </mat-icon>
-    </button>
-    <mat-checkbox [checked]="descendantsAllSelected(node)"
 
-                  (change)="todoItemSelectionToggleByNodeWithChild(node)">{{node.item}}</mat-checkbox>
-  </mat-tree-node>
-  <!--[indeterminate]="descendantsPartiallySelected(node)"-->
+  </section>
+  <section>
+    <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
 
-    <!-- No folha sem filhos-->
-  <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle matTreeNodePadding>
-    <button mat-icon-button disabled></button>
-    <mat-checkbox class="checklist-leaf-node"
-                  [checked]="checklistSelection.isSelected(node)"
-                  (change)="onLeafNodeChange(node)">{{node.item}}</mat-checkbox>
-  </mat-tree-node>
-</mat-tree>
+      <!--Nó com filhos (pastas)-->
+      <mat-tree-node *matTreeNodeDef="let node; when: hasChild"
+        matTreeNodePadding>
+        <button mat-icon-button matTreeNodeToggle
+          [attr.aria-label]="'toggle ' + node.filename">
+          <mat-icon class="mat-icon-rtl-mirror">
+            {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+          </mat-icon>
+        </button>
+        <mat-checkbox [checked]="descendantsAllSelected(node)"
+          [indeterminate]="descendantsPartiallySelected(node)"
+          (change)="todoItemSelectionToggleByNodeWithChild(node)">{{node.item}}</mat-checkbox>
+      </mat-tree-node>
 
+      <!-- No folha sem filhos-->
+      <mat-tree-node *matTreeNodeDef="let node" matTreeNodeToggle
+        matTreeNodePadding>
+        <button mat-icon-button disabled></button>
+        <mat-checkbox class="checklist-leaf-node"
+          [checked]="isNodeWithoutChildSelected(node)"
+          (change)="onLeafNodeChange(node)">{{node.item}}</mat-checkbox>
+      </mat-tree-node>
+    </mat-tree>
+
+  </section>
+
+</main>
