refactor: update the way how use input e output

--- a/src/app/components/tree-checkbox/tree-checkbox.html
+++ b/src/app/components/tree-checkbox/tree-checkbox.html
@@ -2,5 +2,5 @@
   [checked]="descendantsAllSelected()"
   [indeterminate]="descendantsPartiallySelected()"
   (change)="onToggle()">
-  {{ node.item }}
+  {{ node()!.item }}
 </mat-checkbox>
