fix: add correct status to node and leaf

--- a/src/app/components/tree-checkbox/tree-checkbox.html
+++ b/src/app/components/tree-checkbox/tree-checkbox.html
@@ -1,6 +1,6 @@
 <mat-checkbox
-  [checked]="descendantsAllSelected()"
+  [checked]="isLeaf() ? nodeIsSelected(): descendantsAllSelected()"
   [indeterminate]="descendantsPartiallySelected()"
   (change)="onToggle()">
-  {{ node()!.item }}
+  {{ isNecessaryShowName() ? node()!.item : "" }}
 </mat-checkbox>
