--- a/src/app/tree-table/tree-table.html
+++ b/src/app/tree-table/tree-table.html
@@ -16,7 +16,7 @@
     </div>
 
   </section>
-  <section>
+  <section id="tree-section">
     <mat-tree [dataSource]="dataSource" [treeControl]="treeControl">
 
       <!--Nó com filhos (pastas)-->
