fix: correct README link and update image source in app.html

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,7 +4,7 @@
     <p>Acompanhe e gerencie o seu progresso acadêmico de forma simples e intuitiva.</p>
 
     <div class="image-box">
-     <img src="/front-history-course.svg" alt="Histórico de Cursos">
+     <img src="https://cdn.asp.dev.br/imagens/logos/front-history-course.png" alt="Histórico de Cursos">
     </div>
 
     <div class="content">
